delete button for sets added